<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtNomeAdapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/msg_nome"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtEndAdapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtNomeAdapter"
        android:layout_below="@+id/txtNomeAdapter"
        android:text="@string/msg_endereco"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/txtEmailAdapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtNomeAdapter"
        android:layout_below="@+id/txtEndAdapter"
        android:text="@string/msg_email"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/txtTelAdapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtNomeAdapter"
        android:layout_below="@+id/txtEmailAdapter"
        android:text="@string/msg_telefone"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/txtIdAdapter"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtTelAdapter"
        android:layout_toEndOf="@+id/txtEndAdapter"
        android:text="@string/msg_id"
        android:textColor="@android:color/transparent"
        android:textStyle="italic" />

</RelativeLayout>